
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct rlimit {scalar_t__ rlim_max; scalar_t__ rlim_cur; } ;


 int RLIMIT_NOFILE ;
 int getrlimit (int ,struct rlimit*) ;
 int setrlimit (int ,struct rlimit*) ;

__attribute__((used)) static int
get_fd_limit (void)
{
 struct rlimit lim;

 getrlimit (RLIMIT_NOFILE, &lim);
 lim.rlim_cur = lim.rlim_max;
 setrlimit (RLIMIT_NOFILE, &lim);
 return (int)lim.rlim_max;
}
