; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_26382.c_get_fd_limit.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_26382.c_get_fd_limit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rlimit = type { i64, i64 }

@RLIMIT_NOFILE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_fd_limit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_fd_limit() #0 {
  %1 = alloca %struct.rlimit, align 8
  %2 = load i32, i32* @RLIMIT_NOFILE, align 4
  %3 = call i32 @getrlimit(i32 %2, %struct.rlimit* %1)
  %4 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %1, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %1, i32 0, i32 1
  store i64 %5, i64* %6, align 8
  %7 = load i32, i32* @RLIMIT_NOFILE, align 4
  %8 = call i32 @setrlimit(i32 %7, %struct.rlimit* %1)
  %9 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %1, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = trunc i64 %10 to i32
  ret i32 %11
}

declare dso_local i32 @getrlimit(i32, %struct.rlimit*) #1

declare dso_local i32 @setrlimit(i32, %struct.rlimit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
